--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,25 @@
     color: var(--blue);
   }
 
+  .content-container {
+    background-color: var(--paper);
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 3px;
+  }
+
 .rule-text{
     text-align: center;
     padding: 8px;
     margin: 5px;
   }
   
+  button {
+    background-color: var(--purple);
+    color: var(--paper);
+    font-size: 20px;
+    border-radius: 3px;
+    
+  }
